<resources>
    <string name="app_name">QuizzApp</string>

    <string name="btn_all_continue">Continue</string>
    <string name="btn_any_retry">Retry</string>
    <string name="btn_any_submit">Submit</string>
    <string name="btn_any_start">Start</string>
    <string name="btn_all_logout">Log out</string>
    <string name="btn_professor_create_quiz">Create quiz</string>
    <string name="btn_pcreatequiz_add_question">+ Add a new question</string>
    <string name="btn_paddquestion_add_question">Add question</string>
    <string name="btn_pcreatequiz_nextstep">Next step</string>
    <string name="btn_pcreatequiztwo_create">DONE!</string>

    <string name="splashscreen_txt">Designed and developed with love by <b>Zeppers</b></string>


    <string name="onboarding_slide_1_title">Welcome to QuizApp</string>
    <string name="onboarding_slide_1_paragraph">This application will be your tool for taking quizzes <b>more easily.</b></string>
    <string name="onboarding_slide_2_title">If you are a student...</string>
    <string name="onboarding_slide_2_paragraph">You can easily take a quiz, see your result and retry up to 3 times until you improve your results.</string>
    <string name="onboarding_slide_3_title">If you are a teacher...</string>
    <string name="onboarding_slide_3_paragraph">Creating quizzes and managing results will be a pleasureble activity now.</string>


    <string name="roleplay_introd">Before joining us, please tell us if you are <b>a teacher or a student</b></string>
    <string name="roleplay_teacher">TEACHER</string>
    <string name="roleplay_teacher_extra1">create and manage quizzes</string>
    <string name="roleplay_teacher_extra2">analyze results and ranking</string>
    <string name="roleplay_student">STUDENT</string>
    <string name="roleplay_student_extra1">take quizzes</string>
    <string name="roleplay_student_extra2">
        results are analysed and used for reports about your activity</string>


    <string name="signin_introd">You must sign in with your <b>institutional email address</b></string>
    <string name="signin_email_hint">Email(name@csie.ase.ro)</string>
    <string name="signin_password_hint">Password</string>


    <string name="phome_create_quiz">+Create Quiz</string>
    <string name="phome_introd">Hello, professor!</string>
    <string name="phome_public_quizzes">Public quizzes</string>
    <string name="phome_public_quizzes_seeall">See all public quizzes</string>
    <string name="phome_private_quizzes">Private quizzes</string>
    <string name="phome_private_quizzes_seeall">See all private quizzes</string>
    <string name="phome_all_public">All the public quizzes</string>
    <string name="phome_all_private">All the private quizzes</string>
    <string name="phome_introd_text">These are the quizzes created by now. To see more information, <b>check your profile.</b></string>

    <string name="pprofile_head">Your profile</string>
    <string name="pprofile_statistics">By now, you as a teacher have created:</string>
    <string name="pprofile_inactive_quizzes">Inactive quizzes <i>(drafts)</i></string>

    <string name="pcreatequiz_head">Create quiz</string>
    <string name="pcreatequiz_quizname">Quiz name</string>
    <string name="pcreatequiz_description">Description</string>
    <string name="pcreatequiz_questions">Questions</string>


    <string name="pquizdetail_head">Quiz detail</string>
    <string name="pquizdetail_quizname">Quiz name</string>
    <string name="pquizdetail_data1">Created on 12th december of 2018</string>
    <string name="pquizdetail_data2">Expires on 20th december of 2018</string>
    <string name="pquizdetail_info">Even if the quiz is public or private, this is the code. Be careful to share the code of a private quiz with the people you want to take it.</string>
    <string name="pquizdetail_desc">Description</string>
    <string name="pquizdetail_timequest">Time/question</string>
    <string name="pquizdetail_noquest">No. questions</string>
    <string name="pquizdetail_seeall">See all questions and answers</string>
    <string name="pquizdetail_statistics_title">Statistics</string>
    <string name="pquizdetail_statistics_nocommits">Number of commits</string>

    <string name="paddquestion_head">Add a new question</string>
    <string name="paddquestion_question">Question</string>
    <string name="paddquestion_answer1">First answer</string>
    <string name="paddquestion_answer2">Second answer</string>
    <string name="paddquestion_answer3">Third answer</string>
    <string name="paddquestion_answer4">Fourth answer</string>

    <string name="shome_introd">Hello, student!</string>
    <string name="shome_explain">To take a quiz you need to type down a code </string>
    <string name="shome_question">   <u> Why do I need a code?</u>   </string>
    <string name="shome_code">code(ex: 23op53)</string>

    <string name="squestion_questionNr">Question</string>


    <string name="sprofile_head">Your profile</string>
    <string name="sprofile_score">Based on the results by now, your <b>average score</b> is:</string>
    <string name="sprofile_quizhistory">Quiz history <b>(6 results available)</b></string>


    <string name="squizpreview_head">You\'ve entered room #</string>
    <string name="squizpreview_desc_name">Quiz name</string>
    <string name="squizpreview_desc_creator">Creator</string>
    <string name="squizpreview_desc_time">Time/question</string>
    <string name="squizpreview_desc_noquest">No. questions</string>
    <string name="squizpreview_desc_description">Description</string>
    <string name="squizpreview_txt6">Start</string>
    <string name="squizpreview_continue">Continue </string>

    <string name="sresult_header">Finished!</string>
    <string name="sresult_scoredesc">Your score is:</string>
    <string name="sresult_corect">Corect</string>
    <string name="sresult_wrong">Wrong</string>

    <string name="shometries">No more tries for this quiz! :-(</string>
    <string name="shometoast">Select a public quiz or enter a code to take a quiz!</string>
    <string name="signintoastemail">Incorrect email!</string>
    <string name="signintoastpassword">Incorrect password!</string>
    <string name="signintoastinstitutional">You must sign in with your institutional account!</string>
    <string name="shomeincorrectcode">Incorrect code!</string>

    <string name="demoquiz_head">Why do you need a code?</string>
    <string name="demoquiz_info">Every professor can create private or public quizzes. Private quizzes require a code every professor have.</string>
    <string name="demoquiz_advice">If you don\'t have a code yet and have to take a quiz <b>speak to your teacher to get the code.</b></string>
    <string name="title_activity_pcreate_quiz">PCreateQuiz</string>


</resources>
