<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoleplayActivity">

        <TextView
            android:id="@+id/txt_roleplay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/roleplay_introd"
            android:textAlignment="center"
            android:textSize="18sp"
            app:fontFamily="@font/quicksand_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>
        <Button
            android:id="@+id/btn_continue"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorAccent"
            android:text="@string/continue_button"
            android:textAlignment="center"
            android:textSize="20sp"
            app:fontFamily="@font/quicksand_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_professor"
            android:layout_width="0dp"
            android:layout_height="144dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_teacher" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/roleplay_teacher"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    app:fontFamily="@font/quicksand_bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="192dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/roleplay_teacher_extra1"
                    android:textColor="@android:color/darker_gray"
                    app:fontFamily="@font/quicksand_light"
                    tools:text="@string/roleplay_teacher_extra1" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="192dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120dp"
                    android:layout_marginTop="80dp"
                    android:text="@string/roleplay_teacher_extra2"
                    android:textColor="@android:color/darker_gray"
                    app:fontFamily="@font/quicksand_light"
                    tools:text="@string/roleplay_teacher_extra2" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="72dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_ill_teacher"
                    tools:ignore="VectorDrawableCompat"
                    android:layout_marginLeft="24dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_teacher"
            android:layout_width="0dp"
            android:layout_height="144dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_roleplay">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="72dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="24dp"
                    android:contentDescription="TODO"
                    app:srcCompat="@drawable/ic_ill_student"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/roleplay_student"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    app:fontFamily="@font/quicksand_bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="192dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/roleplay_student_extra1"
                    android:textColor="@android:color/darker_gray"
                    app:fontFamily="@font/quicksand_light"
                    tools:text="@string/roleplay_student_extra1" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="192dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120dp"
                    android:layout_marginTop="80dp"
                    android:text="@string/roleplay_student_extra2"
                    android:textColor="@android:color/darker_gray"
                    app:fontFamily="@font/quicksand_light"
                    tools:text="@string/roleplay_student_extra2" />
        </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>